@@ -4524,9 +4524,6 @@ if|if
 condition|(
 name|index
 operator|!=
-name|updates
-operator|.
-name|length
 operator|-
 literal|1
 condition|)
