@@ -43,16 +43,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|Collections
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|Iterator
 import|;
 end_import
@@ -3191,327 +3181,15 @@ name|IOException
 block|{
 try|try
 block|{
-comment|// See HBASE-748 for pseudo code of this method
-if|if
-condition|(
-name|writeBuffer
-operator|.
-name|isEmpty
-argument_list|()
-condition|)
-block|{
-return|return;
-block|}
-name|Collections
-operator|.
-name|sort
-argument_list|(
-name|writeBuffer
-argument_list|)
-expr_stmt|;
-name|List
-argument_list|<
-name|BatchUpdate
-argument_list|>
-name|tempUpdates
-init|=
-operator|new
-name|ArrayList
-argument_list|<
-name|BatchUpdate
-argument_list|>
-argument_list|()
-decl_stmt|;
-name|byte
-index|[]
-name|currentRegion
-init|=
 name|connection
 operator|.
-name|getRegionLocation
+name|processBatchOfRows
 argument_list|(
-name|tableName
-argument_list|,
 name|writeBuffer
-operator|.
-name|get
-argument_list|(
-literal|0
-argument_list|)
-operator|.
-name|getRow
-argument_list|()
-argument_list|,
-literal|false
-argument_list|)
-operator|.
-name|getRegionInfo
-argument_list|()
-operator|.
-name|getRegionName
-argument_list|()
-decl_stmt|;
-name|byte
-index|[]
-name|region
-init|=
-name|currentRegion
-decl_stmt|;
-name|boolean
-name|isLastRow
-init|=
-literal|false
-decl_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|writeBuffer
-operator|.
-name|size
-argument_list|()
-condition|;
-name|i
-operator|++
-control|)
-block|{
-name|BatchUpdate
-name|batchUpdate
-init|=
-name|writeBuffer
-operator|.
-name|get
-argument_list|(
-name|i
-argument_list|)
-decl_stmt|;
-name|tempUpdates
-operator|.
-name|add
-argument_list|(
-name|batchUpdate
-argument_list|)
-expr_stmt|;
-name|isLastRow
-operator|=
-operator|(
-name|i
-operator|+
-literal|1
-operator|)
-operator|==
-name|writeBuffer
-operator|.
-name|size
-argument_list|()
-expr_stmt|;
-if|if
-condition|(
-operator|!
-name|isLastRow
-condition|)
-block|{
-name|region
-operator|=
-name|connection
-operator|.
-name|getRegionLocation
-argument_list|(
-name|tableName
-argument_list|,
-name|writeBuffer
-operator|.
-name|get
-argument_list|(
-name|i
-operator|+
-literal|1
-argument_list|)
-operator|.
-name|getRow
-argument_list|()
-argument_list|,
-literal|false
-argument_list|)
-operator|.
-name|getRegionInfo
-argument_list|()
-operator|.
-name|getRegionName
-argument_list|()
-expr_stmt|;
-block|}
-if|if
-condition|(
-operator|!
-name|Bytes
-operator|.
-name|equals
-argument_list|(
-name|currentRegion
-argument_list|,
-name|region
-argument_list|)
-operator|||
-name|isLastRow
-condition|)
-block|{
-specifier|final
-name|BatchUpdate
-index|[]
-name|updates
-init|=
-name|tempUpdates
-operator|.
-name|toArray
-argument_list|(
-operator|new
-name|BatchUpdate
-index|[
-literal|0
-index|]
-argument_list|)
-decl_stmt|;
-name|int
-name|index
-init|=
-name|connection
-operator|.
-name|getRegionServerForWithoutRetries
-argument_list|(
-operator|new
-name|ServerCallable
-argument_list|<
-name|Integer
-argument_list|>
-argument_list|(
-name|connection
 argument_list|,
 name|tableName
-argument_list|,
-name|batchUpdate
-operator|.
-name|getRow
-argument_list|()
-argument_list|)
-block|{
-specifier|public
-name|Integer
-name|call
-parameter_list|()
-throws|throws
-name|IOException
-block|{
-name|int
-name|i
-init|=
-name|server
-operator|.
-name|batchUpdates
-argument_list|(
-name|location
-operator|.
-name|getRegionInfo
-argument_list|()
-operator|.
-name|getRegionName
-argument_list|()
-argument_list|,
-name|updates
-argument_list|)
-decl_stmt|;
-return|return
-name|i
-return|;
-block|}
-block|}
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|index
-operator|!=
-operator|-
-literal|1
-condition|)
-block|{
-comment|// Basic waiting time. If many updates are flushed, tests have shown
-comment|// that this is barely needed but when commiting 1 update this may
-comment|// get retried hundreds of times.
-try|try
-block|{
-name|Thread
-operator|.
-name|sleep
-argument_list|(
-literal|1000
 argument_list|)
 expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|InterruptedException
-name|e
-parameter_list|)
-block|{
-comment|// continue
-block|}
-name|i
-operator|=
-name|i
-operator|-
-name|updates
-operator|.
-name|length
-operator|+
-name|index
-expr_stmt|;
-name|region
-operator|=
-name|connection
-operator|.
-name|getRegionLocation
-argument_list|(
-name|tableName
-argument_list|,
-name|writeBuffer
-operator|.
-name|get
-argument_list|(
-name|i
-operator|+
-literal|1
-argument_list|)
-operator|.
-name|getRow
-argument_list|()
-argument_list|,
-literal|true
-argument_list|)
-operator|.
-name|getRegionInfo
-argument_list|()
-operator|.
-name|getRegionName
-argument_list|()
-expr_stmt|;
-block|}
-name|currentRegion
-operator|=
-name|region
-expr_stmt|;
-name|tempUpdates
-operator|.
-name|clear
-argument_list|()
-expr_stmt|;
-block|}
-block|}
 block|}
 finally|finally
 block|{
@@ -3525,6 +3203,18 @@ name|clear
 argument_list|()
 expr_stmt|;
 block|}
+block|}
+comment|/**    * Release held resources    *   */
+specifier|public
+name|void
+name|close
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|flushCommits
+argument_list|()
+expr_stmt|;
 block|}
 comment|/**    * Utility method that checks rows existence, length and columns well    * formedness.    *     * @param bu    * @throws IllegalArgumentException    * @throws IOException    */
 specifier|private
