@@ -55,6 +55,7 @@ Release 0.19.0 - Unreleased
    HBASE-971   Fix the failing tests on Hudson
    HBASE-973   [doc] In getting started, make it clear that hbase needs to
                create its directory in hdfs
+   HBASE-963   Fix the retries in HTable.flushCommit
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
